public abstract class Figure {
    
    public abstract double area();
    
    public abstract double perimeter();
}
